Implement a limit on sending tickets, added custom exceptions, fix swagger doc
